--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,5 @@
 /*!
-  Panda Coding
-  make by Chelo
+  Chelo's portfolio
 */
 
 //setting
@@ -31,6 +30,10 @@
 @import "./project/protfolio";
 @import "./project/contact";
 @import "./project/copyright";
+
+//project wp
+@import "./project/work-list";
+@import "./project/work-info";
 
 //utility
 @import "./utility/margin";
