front-pageにworksのページネイション追加
[info]Swiperでスライド+ページネイションを実装

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,6 +30,7 @@
 @import "./project/protfolio";
 @import "./project/contact";
 @import "./project/copyright";
+@import "./project/fornt-page-swiper";
 
 //project wp
 @import "./project/work-list";
