--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
   Chelo's portfolio
 */
@@ -13,7 +14,7 @@
   font-style: normal;
 }
 
-.about__message, .service-item-left__sub-title, .service-item-left__message, .service-item-right__sub-title, .service-item-right__message, .portfolio__message, .contact__message, .contact__notice {
+.about__message, .service-item-left__sub-title, .service-item-left__message, .service-item-right__sub-title, .service-item-right__message, .portfolio__message, .contact__message, .contact__notice, .work-list {
   font-family: ryo-text-plusn, serif;
   font-weight: 400;
   font-style: normal;
@@ -302,7 +303,7 @@ body.page-service {
 
 .top-view__img {
   width: 100%;
-  padding-top: 30vh;
+  padding-top: 10vh;
   background: url("../img/top_panda.jpg") no-repeat center;
   background-size: cover;
   background-position: 70%;
@@ -967,6 +968,65 @@ body.page-service {
   color: #000000;
 }
 
+.fornt-page-swiper {
+  width: calc(100% - 100px);
+  /* 前・次ページボタンの幅をそれぞれ50pxとして、その分を引く */
+  padding-bottom: 50px;
+  /* ★ページネーション・スクロールバー分の余白50pxを下に取る */
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.fornt-page-swiper__pagination {
+  --swiper-theme-color: #000;
+}
+
+.fornt-page-swiper__btn {
+  --swiper-navigation-color: #fffff7;
+  /* ページネーション・スクロールバー（50px）を除く縦位置の中央（＝スライドの高さの中央）に一旦配置 */
+  top: calc((100% - 50px) * 0.5);
+  /* ボタンの高さ（44px）の半分のネガティブマージンで上に少しずらす */
+  margin-top: -22px;
+}
+
+.work-list {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  min-width: 1140px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.work-list__item {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+  -webkit-align-items: flex-start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  border-bottom: solid 1px #000000;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .work-list__link {
   display: -webkit-box;
   display: -webkit-flex;
@@ -981,17 +1041,30 @@ body.page-service {
   -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   padding: 0.5rem;
-  border-bottom: solid 1px #000000;
+  padding-left: 0;
+  /*
+    border-bottom: solid 1px $main-color1;
+    min-width: 540px; */
 }
 
 .work-list__category {
   padding: 5px 8px;
   border: solid 1px #6a808a;
-  margin: 1rem 1.5rem;
+  margin: 0 1.5rem;
+}
+
+.work-list__thumbnail {
+  max-width: 100%;
+  height: auto;
 }
 
 .work-info {
+  margin-left: 10vw;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -999,7 +1072,6 @@ body.page-service {
 }
 
 .work-info__box {
-  margin-left: 10vw;
   max-width: 1140px;
 }
 
