--- a/scss/project/_work-list.scss
+++ b/scss/project/_work-list.scss
@@ -1,14 +1,36 @@
 .work-list {
+  display: flex;
+  flex-direction: row;
+  min-width: $min-width;
+  justify-content: space-between;
+  @extend %font_Ryo-Text-PlusN-M;
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    box-sizing: content-box;
+    border-bottom: solid 1px $main-color1;
+    margin-left: 0.5rem;
+    margin-right: 0.5rem;
+  }
   &__link {
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: flex-start;
     padding: 0.5rem;
+    padding-left: 0; /*
     border-bottom: solid 1px $main-color1;
+    min-width: 540px; */
   }
   &__category {
     padding: 5px 8px;
     border: solid 1px #6a808a;
-    margin: 1rem 1.5rem;
+    margin: 0 1.5rem;
+  }
+  &__thumbnail {
+    //max-width: 512px;
+    max-width: 100%;
+    height: auto;
   }
 }
