--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./layout/main";
 @import "./layout/footer";
 @import "./layout/body";
+@import "./layout/page";
 
 //component
 @import "./component/btn-contact";
@@ -31,6 +32,8 @@
 @import "./project/contact";
 @import "./project/copyright";
 @import "./project/fornt-page-swiper";
+@import "./project/pagination";
+@import "./project/contact-form-7";
 
 //project wp
 @import "./project/work-list";
