--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,6 +33,7 @@
 @import "./project/copyright";
 @import "./project/fornt-page-swiper";
 @import "./project/pagination";
+@import "./project/food-info";
 @import "./project/contact-form-7";
 
 //project wp
