--- a/scss/utility/_margin.scss
+++ b/scss/utility/_margin.scss
@@ -9,7 +9,7 @@
     height: 30px;
   }
   &__box {
-    padding-left: $left-margin;
+    margin-left: $left-margin;
     max-width: $max-width;
   }
 }
