--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./layout/footer";
 @import "./layout/body";
 @import "./layout/page";
+@import "./layout/single";
 
 //component
 @import "./component/btn-contact";
@@ -35,6 +36,7 @@
 @import "./project/pagination";
 @import "./project/food-info";
 @import "./project/contact-form-7";
+@import "./project/single-nav";
 
 //project wp
 @import "./project/work-list";
