--- a/scss/project/_contact-form-7.scss
+++ b/scss/project/_contact-form-7.scss
@@ -1,86 +1,77 @@
 /* Contact Form7 */
 
 .contact7 {
-  max-width: 100%;
+  //max-width: 100%;
   box-sizing: border-box;
-}
-.contact7 dd {
-  margin: 0 0 30px 0;
-  background-color: #fff;
-  border: 1px solid #000;
-}
-.contact7 dt {
-  font-weight: normal;
-  max-width: 33%;
-}
-
-/* 必須マーク */
-.contact7 .must {
-  background: #ff1a00;
-}
-
-/* 任意マーク */
-.contact7 .optional {
-  background: #999;
-}
-
-.contact7 .must,
-.contact7 .optional {
-  color: #fff;
-  border-radius: 3px;
-  font-size: 10px;
-  margin-left: 10px;
-  padding: 5px 10px;
-  letter-spacing: 2px;
-}
-.btn_contact7 {
-  text-align: center;
-}
-.btn_contact7 input {
-  width: 70%;
-  background-color: #005513;
-  color: #fff;
-  font-size: 1.1em;
-  font-weight: bold;
-  letter-spacing: 0.2em;
-  border: 1px solid #005513;
-  -webkit-transition: 0.3s;
-  -moz-transition: 0.3s;
-  -o-transition: 0.3s;
-  -ms-transition: 0.3s;
-  transition: 0.3s;
-}
-.btn_contact7 input:hover {
-  background-color: #fff;
-  color: #005513;
-}
-@media screen and (min-width: 768px) {
-  .contact7 dt {
-    float: left;
-    clear: left;
-    width: 35%;
-    padding: 5px 10px 5px 0;
+  display: flex;
+  flex-direction: column;
+  &__info {
+    display: flex;
+    align-items: center;
+    padding-bottom: 1rem;
   }
-  .contact7 dd {
-    margin-left: 35%;
+  &__label {
+    padding-left: 0.5rem;
   }
-
-  .btn_contact7 input {
-    width: 70%;
-    background-color: #005513;
-    color: #fff;
-    font-size: 1.1em;
-    font-weight: bold;
-    letter-spacing: 0.2em;
-    border: 1px solid #005513;
-    -webkit-transition: 0.3s;
-    -moz-transition: 0.3s;
-    -o-transition: 0.3s;
-    -ms-transition: 0.3s;
-    transition: 0.3s;
-  }
-  .btn_contact7 input:hover {
+  & input {
+    margin: 0 0 30px 0;
     background-color: #fff;
-    color: #005513;
+    border: 1px solid #000;
+  }
+  & textarea {
+    max-width: 100%;
+    margin: 0 0 30px 0;
+    background-color: #fff;
+    border: 1px solid #000;
+  }
+  &__submit {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: fit-content;
+  }
+  &__checkbox {
+    display: flex;
+    border-bottom: 1px solid $main-color1;
+  }
+  &__must {
+    background: $main-color1;
+    color: #fff;
+    border-radius: 3px;
+    font-size: 10px;
+    padding: 5px 10px;
+    letter-spacing: 2px;
+  }
+  &__optional {
+    background: $main-color2;
+    border: 1px solid $main-color1;
+    border-radius: 3px;
+    font-size: 10px;
+    padding: 5px 10px;
+    letter-spacing: 2px;
+  }
+  &__btn {
+    text-align: center;
+    & input {
+      min-width: 50%;
+      background: $main-color1;
+      color: #fff;
+      border-radius: 3px;
+      border: $main-color1 solid 1px;
+      font-size: 1rem;
+      margin-top: 1rem;
+      padding: 5px 10px;
+      letter-spacing: 2px;
+      -webkit-transition: 0.3s;
+      -moz-transition: 0.3s;
+      -o-transition: 0.3s;
+      -ms-transition: 0.3s;
+      transition: 0.3s;
+      &:hover {
+        background-color: #fff;
+        color: $main-color1;
+        border: #000 solid 1px;
+      }
+    }
   }
 }
