--- a/scss/project/_work-list.scss
+++ b/scss/project/_work-list.scss
@@ -40,6 +40,13 @@
     padding: 5px 8px;
     border: solid 1px #6a808a;
     margin: 0 1.5rem;
+    pointer-events: none;
+    cursor: default;
+    text-decoration: none;
+  }
+  &__year {
+    padding: 5px 8px;
+    border: solid 1px #6a808a;
   }
   &__thumbnail {
     max-width: 100%;
