--- a/scss/project/_contact-form-7.scss
+++ b/scss/project/_contact-form-7.scss
@@ -14,6 +14,7 @@
     padding-left: 0.5rem;
   }
   & input {
+    max-width: 100%;
     margin: 0 0 30px 0;
     background-color: #fff;
     border: 1px solid #000;
